# bank-bca-financial-rag

./: .env.example  .gitignore  README.md  debug_events.txt  main.py  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
data/processed/: 20240913-laporan-keuangan-publikasi-bulanan-agustus-2024-ind.json  20241115-laporan-keuangan-publikasi-bulanan-oktober-2024-ind.json  20241213-laporan-keuangan-publikasi-bulanan-november-2024-ind.json
src/agents/: agents.py
src/experiments/: eda.py
src/models/: report.py  report_category.py  report_items.py
src/prompts/: manager.py
src/prompts/templates/: audit_prompt.txt  data_search_prompt.txt  extraction_prompt.txt  insights_prompt.txt  intent_classifier_prompt.txt
src/rag/: chunking.py  embedding.py  hybrid_search.py  ingestion.py  process_pipeline.py  reranker.py  retriever.py
src/tools/: tools.py
src/utils/: evaluate.py  telemetry.py
tests/: evaluation_dataset.json  evaluation_report.json
