[project]
name = "test-2-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=17.28.0",
    "bm25s>=0.3.9",
    "chromadb>=1.5.9",
    "google-adk>=2.4.0",
    "litellm<1.90.0",
    "openai>=2.45.0",
    "openinference-instrumentation-litellm>=0.1.34",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.1",
]
