[project]
name = "datalabs-test-2-rag"
version = "1.0.0"
description = "Datalabs Test 2 - RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.3.9",
    "chromadb>=1.5.9",
    "google-adk>=2.4.0",
    "litellm<1.90.0",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.1",
    "langsmith>=0.1.130",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "torchvision>=0.28.0",
]
